--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="icofont-wechat"></i></div>
               <h4 class="title"><a href="">Facilidade</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p class="description">Voasdasdluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div>
 
@@ -117,7 +117,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="icofont-handshake-deal"></i></div>
               <h4 class="title"><a href="">Confiança</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p class="description">Duis aute irure dodlor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
 
