--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="icofont-handshake-deal"></i></div>
               <h4 class="title"><a href="">Confiança</a></h4>
-              <p class="description">Duis aute irure dodlor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p class="description">Duis aute irure dodlor in reprçllçehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
 
